# crypto-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: neon_workflow.yml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_fix_bot_settings.py  0002_persistence.py  0003_advanced_risk_fields.py  0004_signal_only_outcomes.py  0005_drop_approvals.py  0006_signal_order_type_exchange_id_and_backtest_history.py  0007_widen_symbol_columns.py  0008_signal_confidence_audit.py  1b3d17642dc2_merge_heads.py
app/: __init__.py  main.py
app/api/: __init__.py  routes.py  ui_routes.py  ws_routes.py
app/approval_workflow/: __init__.py  service.py
app/core/: __init__.py  config.py  enums.py  security.py  startup.py  state.py
app/db/: __init__.py  repository.py  session.py  types.py
app/execution/: __init__.py  engine.py
app/knowledge_base/: __init__.py  context_builder.py  embeddings.py  memory.py  reasoning.py  retrieval.py  seed.py  vector_store.py
app/market_data/: __init__.py  provider.py  sentiment.py
app/models/: __init__.py  entities.py
app/monitoring/: __init__.py  metrics.py
app/optimization/: backtester.py  (+1 more)
scripts/: check_secrets.py  ingest_pdf.py  ingest_video_transcript.py  migrate_kb_sqlite_to_neon.py  migrate_lessons.py  resync_symbols.py  sync_futures_universe.py
tests/: __init__.py  conftest.py  test_api_endpoints.py  test_approval_workflow.py  test_candlestick_patterns.py  test_closed_loop.py  test_configurable_strategy.py  test_execution_engine.py  test_journaling.py  test_knowledge_engine.py  test_mtf_timeframes.py  test_mvp_constraints.py  test_outcome_tracker.py  test_repository_integration.py  test_risk_engine.py  test_runtime_risk_limits.py  test_scan_batch.py  test_secret_scanner.py  test_signal_contract_metrics.py  test_strategy_contract.py  test_strategy_registry.py  test_telegram_handlers.py  test_telegram_notifications.py
(+44 files in other folders)
