[project]
name = "crypto-telegram-bot"
version = "0.1.0"
description = "Production-minded MVP for Telegram crypto signal bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.1",
  "alembic>=1.13.2",
  "pgvector>=0.3.4",
  "python-telegram-bot>=21.4",
  "ccxt>=4.4.0",
  "apscheduler>=3.10.4",
  "pandas>=2.2.2",
  "numpy>=2.1.0",
  "openai>=1.45.0",
  "httpx>=0.27.2",
  "prometheus-client>=0.21.0",
  "gymnasium>=0.29.1",
  "stable-baselines3>=2.3.2",
  "shimmy>=2.0.0",
  "jinja2>=3.1.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.2"
]
transcription = [
  "imageio-ffmpeg>=0.5.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
